Implement the 'yolo' feature   * Whenever a 'yolo' tag (or [yolo]) is present in a message, randomly store it     in elasticsearch   * Such messages will be printed using <marquee> and Comic Sans MS in the web     fronted

--- a/www/static/gcu.css
+++ b/www/static/gcu.css
@@ -32,6 +32,13 @@ body {
 .line {
     margin-left: 5px;
 }
+.yolo {
+    margin-left: 5px;
+    font-weight: bold;
+    color: red;
+    text-decoration: blink;
+    font-family: "Comic Sans MS", cursive, sans-serif;
+}
 .tags {
     margin-left: 5px;
 }
